--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -24,9 +24,9 @@ jobs:
 
       - name: Run Cypress tests
         run: npx cypress run
-        continue-on-error: true
 
       - name: Upload Mochawesome report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: mochawesome-report
